# codealive-mcp

./: .dockerignore  .gitignore  .mcpbignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PUBLISHING.md  README.md  docker-compose.example.yml  integration_test.py  manifest.json  pyproject.toml  server.json  smithery.yaml  smoke_test.py
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: CLAUDE.md  ci.yml  main.yml  release.yml
codealive-context-engine/: SKILL.md  setup.py
codealive-context-engine/scripts/: fetch.py  relationships.py
plugins/codealive/: LICENSE
plugins/codealive/skills/codealive-context-engine/references/: query-patterns.md  workflows.md
plugins/codealive/skills/codealive-context-engine/scripts/: grep.py  search.py
scripts/: setup-hooks.sh  verify_mcpb.py
src/: codealive_mcp_server.py
src/core/: __init__.py  client.py  config.py  logging.py  oauth.py  observability.py
src/middleware/: README.md  __init__.py  n8n_middleware.py  observability_middleware.py
src/tests/: __init__.py  test_artifact_relations.py  test_artifact_relationships.py  test_chat_tool.py  test_config.py  test_datasources.py  test_e2e_tools.py  test_error_handling.py  test_fetch_artifacts.py  test_health_endpoint.py  test_http_transport_security.py  test_logging.py  test_n8n_middleware.py  test_oauth.py  test_observability.py  test_observability_middleware.py  test_overview.py  test_parameter_normalization.py  test_protocol_tools.py  test_ready_endpoint.py  test_response_transformer.py  test_search_tool.py  test_stdio_smoke.py  test_tool_api_v3.py  test_tool_metadata.py
src/tools/: __init__.py  artifact_query.py  artifact_relations.py  artifact_relationships.py  chat.py  datasources.py  fetch_artifacts.py  overview.py  repository.py  search.py  tool_api.py
src/utils/: __init__.py  errors.py  response_transformer.py
