[project]
name = "codealive-mcp"
dynamic = ["version"]
description = "MCP server for the CodeAlive API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==3.2.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.1",
    "loguru==0.7.3",
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-instrumentation-httpx==0.60b1",
    "opentelemetry-semantic-conventions==0.60b1",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "mcp==1.26.0",
]

[project.scripts]
codealive-mcp = "codealive_mcp.server:main"

[build-system]
requires = ["setuptools==82.0.1", "setuptools-scm==10.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.setuptools_scm]
fallback_version = "2.0.0"

[tool.uv]
# Relative dates in exclude-newer (e.g. "7 days") require uv ≥ 0.11.
# Older versions silently ignore the whole [tool.uv] section on parse error.
required-version = "~=0.11.0"
exclude-newer = "7 days"
